--- a/workflows/_quarto.yml
+++ b/workflows/_quarto.yml
@@ -7,7 +7,7 @@ book:
   author: "Group Name"
   date: "01/01/2024"
   chapters:
-    - casa0025.qmd
+    - index.qmd
   repo-actions: [edit]
   downloads: [pdf, epub]
   sharing: [twitter, facebook]
